packages/taquito-michel-codec/test/contracts_015/ill_typed/view_op_invalid_arity.tz
parameter (pair nat address) ;
storage nat ;
code { CAR ; UNPAIR ; VIEW "add" ; IF_SOME { } { PUSH nat 1 } ; NIL operation ; PAIR } ;
